# ParaFetch

./: CMakeLists.txt  WALKTHROUGH.md  batchdownloaddialog.cpp  batchdownloaddialog.h  chunkprogress.h  downloadmanager.cpp  downloadmanager.h  downloadworker.cpp  downloadworker.h  httphelper.cpp  httphelper.h  main.cpp  myform.cpp  myform.h  notificationmanager.cpp  notificationmanager.h  settingsdialog.cpp  settingsdialog.h
